--- a/Templates/About.html
+++ b/Templates/About.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>About - KnowShare</title>
-   <link rel="stylesheet" type="text/css" href="../static/main.css"> 
+   <link rel="stylesheet" type="text/css" href="../static/Main.css"> 
 </head>
 <body>
     
